BUILD: NEW modal feature, dark mode fixes

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@
 }
 
 .button-on {
-	@apply text-white bg-black px-4 py-1 rounded-md ring-2 mx-1 ring-black;
+	@apply mx-1 rounded-md bg-black px-4 py-1 text-white ring-2 ring-black;
 }
 
 .button-off {
-	@apply text-black bg-white px-4 py-1 rounded-md ring-2 mx-1 ring-black hover:cursor-pointer;
+	@apply mx-1 rounded-md bg-white px-4 py-1 text-black ring-2 ring-black hover:cursor-pointer;
 }
